namespaces/live.cloud-platform.service.justice.gov.uk/sw-psa-audit-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "sw-psa-audit-test"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "cloud-platform"
    cloud-platform.justice.gov.uk/application: "cloud platform psa migration. not really its just a general test namespace. some more text"
    cloud-platform.justice.gov.uk/owner: "Cloud Platform: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-helloworld-ruby-app"
    cloud-platform.justice.gov.uk/team-name: "sw-go-helloworld-admin-team"
    cloud-platform.justice.gov.uk/review-after: "2024-03-24"
